@@ -46,6 +46,7 @@
 29. Resize device properties dialog when changing transcoder.
 30. Initialise sidebar icon sizes before constructing.
 31. Use QDesktopWidget::logicalDpiX()/96.0 to set DPI scale factor.
+32. Display multiple genres as separate entries in playlists page genre combo.
 
 1.4.1
 -----
